# CompatKiller

./: .gitignore  README.md
src/: CMakeLists.txt  CompatKiller.cpp  CompatKiller.rc  pch.h
